--- a/latex/classRGESolver.tex
+++ b/latex/classRGESolver.tex
@@ -45,7 +45,9 @@ void \mbox{\hyperlink{classRGESolver_a51938deb00fbca684c8e4e5b10a239ad}{Set\+\_\
 \item 
 void \mbox{\hyperlink{classRGESolver_aedc6f80d9a01de09d4ddf1e5b670c690}{Evolve}} (std\+::string method, double muI, double muF)
 \begin{DoxyCompactList}\small\item\em Performs the R\+GE evolution. \end{DoxyCompactList}\item 
-void \mbox{\hyperlink{classRGESolver_a7b6c7701ddfa1bd3f6f34e7794fc1dca}{Generate\+S\+M\+Initial\+Conditions}} (double mu, std\+::string basis, std\+::string method, bool input\+C\+KM=true)
+void \mbox{\hyperlink{classRGESolver_af4ed89d1098aa91112cf9e5a39dd8e7f}{Generate\+S\+M\+Initial\+Conditions}} (double mu, std\+::string basis, std\+::string method)
+\begin{DoxyCompactList}\small\item\em Generates the initial conditions for Standard Model\textquotesingle{}s parameters (gauge couplings, Yukawa coupling, quartic coupling and Higgs\textquotesingle{} boson mass) at the scale {\ttfamily mu} (in GeV), using one-\/loop pure SM beta functions. \end{DoxyCompactList}\item 
+void \mbox{\hyperlink{classRGESolver_ad61f3c391866dfa833b247019749f373}{Generate\+S\+M\+Initial\+Conditions}} (double mu\+In, double mu\+Fin, std\+::string basis, std\+::string method, double g1in, double g2in, double g3in, double lambdain, double mh2in, double Muin\mbox{[}3\mbox{]}, double Mdin\mbox{[}3\mbox{]}, double Mein\mbox{[}3\mbox{]}, double t12in, double t13in, double t23in, double deltain)
 \begin{DoxyCompactList}\small\item\em Generates the initial conditions for Standard Model\textquotesingle{}s parameters (gauge couplings, Yukawa coupling, quartic coupling and Higgs\textquotesingle{} boson mass) at the scale {\ttfamily mu} (in GeV), using one-\/loop pure SM beta functions. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{classRGESolver_a7c0c4303beb14f728a70542c8583b3a7}{Evolve\+S\+M\+Only}} (std\+::string method, double muI, double muF)
 \begin{DoxyCompactList}\small\item\em Same as \mbox{\hyperlink{classRGESolver_aedc6f80d9a01de09d4ddf1e5b670c690}{Evolve}}, but only for the SM parameters. The user should use this method instead of \mbox{\hyperlink{classRGESolver_aedc6f80d9a01de09d4ddf1e5b670c690}{Evolve}} when interested in pure SM running. Using this function is the same of using \mbox{\hyperlink{classRGESolver_aedc6f80d9a01de09d4ddf1e5b670c690}{Evolve}} with all the S\+M\+E\+FT coefficients set to 0, but it is faster since it does compute only the evolution for the SM parameters. \end{DoxyCompactList}\item 
@@ -56,22 +58,12 @@ void \mbox{\hyperlink{classRGESolver_ad499b4ef512ac892c4f5a71b9fa0daf4}{Compute\
 {\em ~\newline
  }\begin{DoxyCompactItemize}
 \item 
-void \mbox{\hyperlink{classRGESolver_a063197d49e4878d86b2d9e5ab6b0b9f8}{Set\+Fermion\+Mass}} (std\+::string name, double val)
-\begin{DoxyCompactList}\small\item\em Setter function for the mass of the fermions (in GeV). Assignation is allowed only if the inserted value is not negative. \end{DoxyCompactList}\item 
 double \mbox{\hyperlink{classRGESolver_a55375c02297501cc3ba0302f707a690d}{Get\+Fermion\+Mass}} (std\+::string name)
 \begin{DoxyCompactList}\small\item\em Getter function for the mass of the fermions (in GeV). \end{DoxyCompactList}\item 
-void \mbox{\hyperlink{classRGESolver_a7e045398572694648fded4253423705e}{Set\+C\+K\+M\+Angle}} (std\+::string name, double val)
-\begin{DoxyCompactList}\small\item\em Setter function for the C\+KM matrix angles $\theta_{12},\theta_{13},\theta_{23}$. The assignation is completed only if the inserted angle is $\in [0,\frac{\pi}{2}]$. \end{DoxyCompactList}\item 
 double \mbox{\hyperlink{classRGESolver_a1bdc3a8209979b9f4c583b47fc4988d4}{Get\+C\+K\+M\+Angle}} (std\+::string name)
 \begin{DoxyCompactList}\small\item\em Getter function for the C\+KM matrix angles $\theta_{12},\theta_{13},\theta_{23}$. \end{DoxyCompactList}\item 
-void \mbox{\hyperlink{classRGESolver_a74d1c5b7633de682a376204d1788b794}{Set\+C\+K\+M\+Phase}} (double val)
-\begin{DoxyCompactList}\small\item\em Setter function for the C\+KM matrix phase $\delta$. The assignation is completed only if $\delta\in (-\pi,\pi]$. \end{DoxyCompactList}\item 
 double \mbox{\hyperlink{classRGESolver_a891564c063a942fbd01830b30fa8e6e1}{Get\+C\+K\+M\+Phase}} ()
 \begin{DoxyCompactList}\small\item\em Getter function for the C\+KM matrix phase $\delta$. \end{DoxyCompactList}\item 
-void \mbox{\hyperlink{classRGESolver_ad47f4773fa7eaf4bb9bc3cb15de5b2c2}{Set\+S\+M\+Input\+Scale}} (double mu)
-\begin{DoxyCompactList}\small\item\em Setter method for the scale at which the method \mbox{\hyperlink{classRGESolver_a7b6c7701ddfa1bd3f6f34e7794fc1dca}{Generate\+S\+M\+Initial\+Conditions}} takes the input values (in GeV) for SM parameters. \end{DoxyCompactList}\item 
-double \mbox{\hyperlink{classRGESolver_a9b828a6908004f6680e519b393411f03}{Get\+S\+M\+Input\+Scale}} ()
-\begin{DoxyCompactList}\small\item\em Getter method for the scale at which the method \mbox{\hyperlink{classRGESolver_a7b6c7701ddfa1bd3f6f34e7794fc1dca}{Generate\+S\+M\+Initial\+Conditions}} takes the input values for SM parameters. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{classRGESolver_adc2b8a9a10216ec5285569c8f24cbed2}{Set\+Coefficient}} (std\+::string name, double val)
 \begin{DoxyCompactList}\small\item\em Setter function for scalar/0F parameters (no flavour indices). \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{classRGESolver_aec5d994dae1dccb52ece9e51c28b9f2e}{Set\+Coefficient}} (std\+::string name, double val, int i, int j)
@@ -102,9 +94,10 @@ The accuracy level of the numerical integration can be tuned selecting the param
  ~\newline
  All the S\+M\+E\+FT coefficients are set using the \mbox{\hyperlink{classRGESolver_adc2b8a9a10216ec5285569c8f24cbed2}{Set\+Coefficient}} methods and accessed with the \mbox{\hyperlink{classRGESolver_a23d5d847021421bc8a9ba03412d2674e}{Get\+Coefficient}} methods. There exist three different signatures for each method, depending on the number of flavour indices of the parameter (0,2,4). ~\newline
  These two routines must be used also for the SM parameters $g_1,g_2,g_3,\lambda,m_h^2,$ $\mathrm{Re}(\mathcal{Y}_u),\mathrm{Im}(\mathcal{Y}_u),$ $\mathrm{Re}(\mathcal{Y}_d),\mathrm{Im}(\mathcal{Y}_d),$ $\mathrm{Re}(\mathcal{Y}_e),\mathrm{Im}(\mathcal{Y}_e)$ (we follow \href{https://arxiv.org/abs/1308.2627}{\texttt{ https\+://arxiv.\+org/abs/1308.\+2627}} for what concerns the conventions in the Higgs\textquotesingle{} sector). ~\newline
-If the user is interested in using the \mbox{\hyperlink{classRGESolver_a7b6c7701ddfa1bd3f6f34e7794fc1dca}{Generate\+S\+M\+Initial\+Conditions}} method, the input for the C\+KM matrix parameters and the fermion masses must be given with the methods \mbox{\hyperlink{classRGESolver_a7e045398572694648fded4253423705e}{Set\+C\+K\+M\+Angle}}, \mbox{\hyperlink{classRGESolver_a74d1c5b7633de682a376204d1788b794}{Set\+C\+K\+M\+Phase}} \mbox{\hyperlink{classRGESolver_a063197d49e4878d86b2d9e5ab6b0b9f8}{Set\+Fermion\+Mass}}. ~\newline
-A complete list of the keys that must be used to correctly invoke setter/getter methods are given in tables \doxytablelink{classRGESolver_SM}{SM}, \doxytablelink{classRGESolver_0F}{0F}, \doxytablelink{classRGESolver_2F}{2F} and \doxytablelink{classRGESolver_4F}{4F}. ~\newline
-A summary of the operators symmetry classes is given in table \doxytablelink{classRGESolver_Sym}{Sym}.
+ A complete list of the keys that must be used to correctly invoke setter/getter methods are given in tables \doxytablelink{classRGESolver_SM}{SM}, \doxytablelink{classRGESolver_0F}{0F}, \doxytablelink{classRGESolver_2F}{2F} and \doxytablelink{classRGESolver_4F}{4F}. ~\newline
+A summary of the operators symmetry classes is given in table \doxytablelink{classRGESolver_Sym}{Sym}. ~\newline
+ ~\newline
+ We follow \href{http://www.utfit.org/UTfit/Formalism}{\texttt{ http\+://www.\+utfit.\+org/\+U\+Tfit/\+Formalism}} for what concerns the conventions for the C\+KM matrix.
 
 \begin{DoxyAuthor}{Author}
 S. Di Noi, L. Silvestrini. 
@@ -469,30 +462,68 @@ Same as \mbox{\hyperlink{classRGESolver_aedc6f80d9a01de09d4ddf1e5b670c690}{Evolv
 {\em muF} & final energy scale (in GeV) \\
 \hline
 \end{DoxyParams}
-\mbox{\Hypertarget{classRGESolver_a7b6c7701ddfa1bd3f6f34e7794fc1dca}\label{classRGESolver_a7b6c7701ddfa1bd3f6f34e7794fc1dca}} 
+\mbox{\Hypertarget{classRGESolver_af4ed89d1098aa91112cf9e5a39dd8e7f}\label{classRGESolver_af4ed89d1098aa91112cf9e5a39dd8e7f}} 
 \index{RGESolver@{RGESolver}!GenerateSMInitialConditions@{GenerateSMInitialConditions}}
 \index{GenerateSMInitialConditions@{GenerateSMInitialConditions}!RGESolver@{RGESolver}}
-\doxysubsubsection{\texorpdfstring{GenerateSMInitialConditions()}{GenerateSMInitialConditions()}}
-{\footnotesize\ttfamily void R\+G\+E\+Solver\+::\+Generate\+S\+M\+Initial\+Conditions (\begin{DoxyParamCaption}\item[{double}]{mu,  }\item[{std\+::string}]{basis,  }\item[{std\+::string}]{method,  }\item[{bool}]{input\+C\+KM = {\ttfamily true} }\end{DoxyParamCaption})}
+\doxysubsubsection{\texorpdfstring{GenerateSMInitialConditions()}{GenerateSMInitialConditions()}\hspace{0.1cm}{\footnotesize\ttfamily [1/2]}}
+{\footnotesize\ttfamily void R\+G\+E\+Solver\+::\+Generate\+S\+M\+Initial\+Conditions (\begin{DoxyParamCaption}\item[{double}]{mu,  }\item[{std\+::string}]{basis,  }\item[{std\+::string}]{method }\end{DoxyParamCaption})}
 
 
 
 Generates the initial conditions for Standard Model\textquotesingle{}s parameters (gauge couplings, Yukawa coupling, quartic coupling and Higgs\textquotesingle{} boson mass) at the scale {\ttfamily mu} (in GeV), using one-\/loop pure SM beta functions. 
 
-The low energy input values for the SM parameters usde by this method is given at the scale {\ttfamily S\+M\+Input\+Scale} (default value = 91.\+05 GeV). The user can change this low-\/energy scale via \mbox{\hyperlink{classRGESolver_ad47f4773fa7eaf4bb9bc3cb15de5b2c2}{Set\+S\+M\+Input\+Scale}}. If the flag C\+K\+Minput is set to {\ttfamily true} (default), the input for the Yukawa matrices will be generated from the current values of the C\+KM matrix and the masses of the fermions. If set to false, the current values of the Yukawa matrices will be used to generate the SM initial conditions at the chosen scale. ~\newline
-The usage of this method with C\+K\+Minput={\ttfamily true} should be restricted to realistic cases, with usual fermion mass hierarchy (smallest mass for the 1st generation and largest mass for the 3rd generation and no mass degeneracy) and with non-\/zero C\+KM matrix angles. ~\newline
-For more particular cases, the user should set C\+K\+Minput={\ttfamily false} and set the input in terms of the Yukawa matrices. ~\newline
- To set the masses of the fermions and the C\+KM matrix parameters, use
-
-
+The initial conditions are generated at the scale {\ttfamily mu} starting from the values at $\mu = ??? $ GeV in table ???. 
 \begin{DoxyParams}{Parameters}
-{\em mu} & Scale (in GeV) at which the initial conditions are generate \\
+{\em mu} & Scale (in GeV) at which the initial conditions are generated \\
 \hline
 {\em basis} & Flavour basis ( {\ttfamily \char`\"{}\+U\+P\char`\"{}} or {\ttfamily \char`\"{}\+D\+O\+W\+N\char`\"{}}) \\
 \hline
 {\em method} & Method used by \mbox{\hyperlink{classRGESolver}{R\+G\+E\+Solver}} to run the SM parameters to the scale {\ttfamily mu} ({\ttfamily \char`\"{}\+Numeric\char`\"{}} or {\ttfamily \char`\"{}\+Leading-\/\+Log\char`\"{}}) \\
 \hline
-{\em input\+C\+KM} & If set to {\ttfamily true} (default), the input for the Yukawa matrices will be generated from the current value of the C\+KM matrix and the masses of the fermions. \\
+\end{DoxyParams}
+\mbox{\Hypertarget{classRGESolver_ad61f3c391866dfa833b247019749f373}\label{classRGESolver_ad61f3c391866dfa833b247019749f373}} 
+\index{RGESolver@{RGESolver}!GenerateSMInitialConditions@{GenerateSMInitialConditions}}
+\index{GenerateSMInitialConditions@{GenerateSMInitialConditions}!RGESolver@{RGESolver}}
+\doxysubsubsection{\texorpdfstring{GenerateSMInitialConditions()}{GenerateSMInitialConditions()}\hspace{0.1cm}{\footnotesize\ttfamily [2/2]}}
+{\footnotesize\ttfamily void R\+G\+E\+Solver\+::\+Generate\+S\+M\+Initial\+Conditions (\begin{DoxyParamCaption}\item[{double}]{mu\+In,  }\item[{double}]{mu\+Fin,  }\item[{std\+::string}]{basis,  }\item[{std\+::string}]{method,  }\item[{double}]{g1in,  }\item[{double}]{g2in,  }\item[{double}]{g3in,  }\item[{double}]{lambdain,  }\item[{double}]{mh2in,  }\item[{double}]{Muin\mbox{[}3\mbox{]},  }\item[{double}]{Mdin\mbox{[}3\mbox{]},  }\item[{double}]{Mein\mbox{[}3\mbox{]},  }\item[{double}]{t12in,  }\item[{double}]{t13in,  }\item[{double}]{t23in,  }\item[{double}]{deltain }\end{DoxyParamCaption})}
+
+
+
+Generates the initial conditions for Standard Model\textquotesingle{}s parameters (gauge couplings, Yukawa coupling, quartic coupling and Higgs\textquotesingle{} boson mass) at the scale {\ttfamily mu} (in GeV), using one-\/loop pure SM beta functions. 
+
+The initial conditions are generated at the scale {\ttfamily mu\+Fin} starting from the inserted parameters at the scale {\ttfamily mu\+In}. This method should be used with usual fermion hierarchy (smallest mass for the 1st generation and greatest mass for the 3rd withoud mass degeneracy for all up and down quarks and for charged leptons). The generation of the initial conditions is performed only if all the masses are non-\/negative and if $ \theta_{12},\theta_{13},\theta_{23} \in [0, \pi/2] $, $\delta \in (\pi,\pi]$. 
+\begin{DoxyParams}{Parameters}
+{\em mu\+In} & Low-\/energy input scale (in GeV) \\
+\hline
+{\em mu\+In} & Scale (in GeV) at which the initial conditions are generated \\
+\hline
+{\em basis} & Flavour basis ( {\ttfamily \char`\"{}\+U\+P\char`\"{}} or {\ttfamily \char`\"{}\+D\+O\+W\+N\char`\"{}}) \\
+\hline
+{\em method} & Method used by \mbox{\hyperlink{classRGESolver}{R\+G\+E\+Solver}} to run the SM parameters to the scale {\ttfamily mu} ({\ttfamily \char`\"{}\+Numeric\char`\"{}} or {\ttfamily \char`\"{}\+Leading-\/\+Log\char`\"{}}) \\
+\hline
+{\em g1in} & $g_1 $ \\
+\hline
+{\em g2in} & $g_2 $ \\
+\hline
+{\em g3in} & $g_3 $ \\
+\hline
+{\em lambdain} & $ \lambda $ \\
+\hline
+{\em mh2in} & $ m_h^2 $ (in Ge\+V$^\wedge$2) \\
+\hline
+{\em Muin} & Array containing the masses of the up-\/type quarks in GeV in the order $(m_u,m_c,m_t)$ \\
+\hline
+{\em Mdin} & Array containing the masses of the down-\/type quarks in GeV in the order $(m_d,m_s,m_b)$ \\
+\hline
+{\em Mein} & Array containing the masses of the charged leptons in GeV in the order $(m_{e},m_{\mu},m_{\tau})$ \\
+\hline
+{\em t12in} & The C\+KM matrix angle $ \theta_{12} $ \\
+\hline
+{\em t13in} & The C\+KM matrix angle $ \theta_{13} $ \\
+\hline
+{\em t23in} & The C\+KM matrix angle $ \theta_{23} $ \\
+\hline
+{\em deltain} & The C\+KM matrix phase $ \delta $ \\
 \hline
 \end{DoxyParams}
 \mbox{\Hypertarget{classRGESolver_a1bdc3a8209979b9f4c583b47fc4988d4}\label{classRGESolver_a1bdc3a8209979b9f4c583b47fc4988d4}} 
@@ -611,19 +642,6 @@ Getter function for the mass of the fermions (in GeV).
 the requested fermion mass ~\newline
  
 \end{DoxyReturn}
-\mbox{\Hypertarget{classRGESolver_a9b828a6908004f6680e519b393411f03}\label{classRGESolver_a9b828a6908004f6680e519b393411f03}} 
-\index{RGESolver@{RGESolver}!GetSMInputScale@{GetSMInputScale}}
-\index{GetSMInputScale@{GetSMInputScale}!RGESolver@{RGESolver}}
-\doxysubsubsection{\texorpdfstring{GetSMInputScale()}{GetSMInputScale()}}
-{\footnotesize\ttfamily double R\+G\+E\+Solver\+::\+Get\+S\+M\+Input\+Scale (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})\hspace{0.3cm}{\ttfamily [inline]}}
-
-
-
-Getter method for the scale at which the method \mbox{\hyperlink{classRGESolver_a7b6c7701ddfa1bd3f6f34e7794fc1dca}{Generate\+S\+M\+Initial\+Conditions}} takes the input values for SM parameters. 
-
-\begin{DoxyReturn}{Returns}
-{\ttfamily Input\+Scale\+\_\+\+SM} (in GeV). 
-\end{DoxyReturn}
 \mbox{\Hypertarget{classRGESolver_ab6a813bff78d9278d3b875ea9c2f5324}\label{classRGESolver_ab6a813bff78d9278d3b875ea9c2f5324}} 
 \index{RGESolver@{RGESolver}!SaveOutputFile@{SaveOutputFile}}
 \index{SaveOutputFile@{SaveOutputFile}!RGESolver@{RGESolver}}
@@ -639,38 +657,6 @@ Currently, only \char`\"{}\+S\+L\+H\+A\char`\"{} format is implemented
 {\em filename} & Name of the output file \\
 \hline
 {\em format} & Format of the output file \\
-\hline
-\end{DoxyParams}
-\mbox{\Hypertarget{classRGESolver_a7e045398572694648fded4253423705e}\label{classRGESolver_a7e045398572694648fded4253423705e}} 
-\index{RGESolver@{RGESolver}!SetCKMAngle@{SetCKMAngle}}
-\index{SetCKMAngle@{SetCKMAngle}!RGESolver@{RGESolver}}
-\doxysubsubsection{\texorpdfstring{SetCKMAngle()}{SetCKMAngle()}}
-{\footnotesize\ttfamily void R\+G\+E\+Solver\+::\+Set\+C\+K\+M\+Angle (\begin{DoxyParamCaption}\item[{std\+::string}]{name,  }\item[{double}]{val }\end{DoxyParamCaption})}
-
-
-
-Setter function for the C\+KM matrix angles $\theta_{12},\theta_{13},\theta_{23}$. The assignation is completed only if the inserted angle is $\in [0,\frac{\pi}{2}]$. 
-
-
-\begin{DoxyParams}{Parameters}
-{\em name} & of the angle (see table \doxytablelink{classRGESolver_SM}{SM}) \\
-\hline
-{\em val} & its value \\
-\hline
-\end{DoxyParams}
-\mbox{\Hypertarget{classRGESolver_a74d1c5b7633de682a376204d1788b794}\label{classRGESolver_a74d1c5b7633de682a376204d1788b794}} 
-\index{RGESolver@{RGESolver}!SetCKMPhase@{SetCKMPhase}}
-\index{SetCKMPhase@{SetCKMPhase}!RGESolver@{RGESolver}}
-\doxysubsubsection{\texorpdfstring{SetCKMPhase()}{SetCKMPhase()}}
-{\footnotesize\ttfamily void R\+G\+E\+Solver\+::\+Set\+C\+K\+M\+Phase (\begin{DoxyParamCaption}\item[{double}]{val }\end{DoxyParamCaption})}
-
-
-
-Setter function for the C\+KM matrix phase $\delta$. The assignation is completed only if $\delta\in (-\pi,\pi]$. 
-
-
-\begin{DoxyParams}{Parameters}
-{\em val} & its value \\
 \hline
 \end{DoxyParams}
 \mbox{\Hypertarget{classRGESolver_adc2b8a9a10216ec5285569c8f24cbed2}\label{classRGESolver_adc2b8a9a10216ec5285569c8f24cbed2}} 
@@ -736,38 +722,6 @@ If at least one of the inserted indices is outside the \mbox{[}0\+:2\mbox{]} ran
 {\em k} & third flavour index \\
 \hline
 {\em l} & fourth flavour index \\
-\hline
-\end{DoxyParams}
-\mbox{\Hypertarget{classRGESolver_a063197d49e4878d86b2d9e5ab6b0b9f8}\label{classRGESolver_a063197d49e4878d86b2d9e5ab6b0b9f8}} 
-\index{RGESolver@{RGESolver}!SetFermionMass@{SetFermionMass}}
-\index{SetFermionMass@{SetFermionMass}!RGESolver@{RGESolver}}
-\doxysubsubsection{\texorpdfstring{SetFermionMass()}{SetFermionMass()}}
-{\footnotesize\ttfamily void R\+G\+E\+Solver\+::\+Set\+Fermion\+Mass (\begin{DoxyParamCaption}\item[{std\+::string}]{name,  }\item[{double}]{val }\end{DoxyParamCaption})}
-
-
-
-Setter function for the mass of the fermions (in GeV). Assignation is allowed only if the inserted value is not negative. 
-
-
-\begin{DoxyParams}{Parameters}
-{\em name} & name of the fermion (see table \doxytablelink{classRGESolver_SM}{SM}) \\
-\hline
-{\em val} & its value \\
-\hline
-\end{DoxyParams}
-\mbox{\Hypertarget{classRGESolver_ad47f4773fa7eaf4bb9bc3cb15de5b2c2}\label{classRGESolver_ad47f4773fa7eaf4bb9bc3cb15de5b2c2}} 
-\index{RGESolver@{RGESolver}!SetSMInputScale@{SetSMInputScale}}
-\index{SetSMInputScale@{SetSMInputScale}!RGESolver@{RGESolver}}
-\doxysubsubsection{\texorpdfstring{SetSMInputScale()}{SetSMInputScale()}}
-{\footnotesize\ttfamily void R\+G\+E\+Solver\+::\+Set\+S\+M\+Input\+Scale (\begin{DoxyParamCaption}\item[{double}]{mu }\end{DoxyParamCaption})\hspace{0.3cm}{\ttfamily [inline]}}
-
-
-
-Setter method for the scale at which the method \mbox{\hyperlink{classRGESolver_a7b6c7701ddfa1bd3f6f34e7794fc1dca}{Generate\+S\+M\+Initial\+Conditions}} takes the input values (in GeV) for SM parameters. 
-
-
-\begin{DoxyParams}{Parameters}
-{\em mu} & \\
 \hline
 \end{DoxyParams}
 
